# gcp-pulumi

./: README.md
.github/actions/pulumi-python/: action.yaml  action.yaml_back
.github/workflows/: deploy-warpstream.yaml  deploy-warpstream.yaml_back  deploy.yaml  gcp.yaml  generate-warpstream-tls.yaml  otel-collector.yaml
components/: __init__.py  pyproject.toml
components/gke-cluster/: __init__.py  cluster.py  gke_cluster.py
components/gkecluster/: __init__.py  cluster.py  kubeconfig_generator.py
components/kubeconfig/: __init__.py  kubeconfig.py  kubeconfig_back.py_back
components/warpstreamagents/: __init__.py  agent_deployment.py  cluster_setup.py  gcp_cert_retrieval.py  gcs.py  iam.py  secret_management.py  warpstream_agents.py  warpstream_cluster.py
programs/: requirements.txt
programs/gke-cluster/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  main.py  pyproject.toml  requirements.txt
programs/otel-collector-gke/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  defaults.yaml  main.py  pyproject.toml  requirements.txt  warpstream.yaml
programs/warpstream-agents/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  __main__.py  main.py  pyproject.toml  requirements.txt  values.yaml
